<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/specsHelpItem"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/specs_help_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/addCompareItem"
        android:checkable="true"
        android:title="@string/submenu_specs_compare"
        android:visible="true" />
    <item
        android:id="@+id/addFavouriteItem"
        android:title="@string/submenu_specs_favourite" />
    <item
        android:id="@+id/commentItem"
        android:title="@string/submenu_specs_comment" />
    <item
        android:id="@+id/shareItem"
        android:title="@string/submenu_specs_share" />
    <item
        android:id="@+id/shareLinkItem"
        android:title="@string/submenu_specs_share_link" />
</menu>
