<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/menu_search">
        <intent
            android:action="com.macindex.macindex.action.OPEN_SEARCH"
            android:targetPackage="com.macindex.macindex"
            android:targetClass="com.macindex.macindex.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="random"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_random"
        android:shortcutShortLabel="@string/menu_random">
        <intent
            android:action="com.macindex.macindex.action.OPEN_RANDOM"
            android:targetPackage="com.macindex.macindex"
            android:targetClass="com.macindex.macindex.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="favourite"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_favourite"
        android:shortcutShortLabel="@string/menu_favourite">
        <intent
            android:action="com.macindex.macindex.action.OPEN_FAVOURITES"
            android:targetPackage="com.macindex.macindex"
            android:targetClass="com.macindex.macindex.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="comment"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_comment"
        android:shortcutShortLabel="@string/menu_comment">
        <intent
            android:action="com.macindex.macindex.action.OPEN_COMMENTS"
            android:targetPackage="com.macindex.macindex"
            android:targetClass="com.macindex.macindex.MainActivity" />
    </shortcut>
</shortcuts>
